<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundandseperator">


    <RelativeLayout
        android:id="@+id/TitleView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/themeblue">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="170dp"
            android:layout_height="60dp"

            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/accountsetting"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="16dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_back"
            android:onClick="ClickClose" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/TitleView"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:clickable="true"
        android:onClick="ClickModifyAccount">

        <TextView
            android:id="@+id/row1title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:text="@string/accountandsecurity"
            android:textColor="@color/darkgrey"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_rightarrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/row1"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:onClick="ClickSoftwareUpdate">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:text="@string/softwareupdate"
            android:textColor="@color/darkgrey"
            android:textSize="18sp" />

        <Button
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_rightarrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/row2"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:text="@string/alarmswitch"
            android:textColor="@color/darkgrey"
            android:textSize="18sp" />


        <ToggleButton
            android:id="@+id/switch_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:button="@drawable/switch_btn"
            android:checked="true"

            android:textOff="关"
            android:textOn="开" />


    </RelativeLayout>


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/row3"
   android:layout_marginTop="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/icon_logout"
        android:onClick="ClickLogout"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="22sp" />


</RelativeLayout>
