<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class=".RegistAccountBinder">

        <variable
            name="registAccount"
            type="com.ewell.android.sleepcareforphone.viewmodels.RegistAccountViewModel" />

    </data>


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.ewell.android.sleepcareforphone.activities.RegistAccountActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_logo_1" />
        </FrameLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_above="@+id/verifynum"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_telephone"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/icon_telephone"
                android:hint="@string/loginusername"
                android:inputType="phone"
                android:textColor="@color/darkgrey"
                android:textColorHint="@color/lightgrey"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/underline1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/telephone"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@color/themeblue" />

            <EditText
                android:id="@+id/verifynum"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_above="@+id/textnewpassword"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_verify"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/icon_verify"
                android:hint="@string/verifynum"
                android:inputType="number"
                android:textColor="@color/darkgrey"
                android:textColorHint="@color/lightgrey"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnsendverify"
                android:layout_width="80dp"
                android:layout_height="29dp"
                android:layout_above="@+id/textnewpassword"

                android:layout_alignParentRight="true"
                android:layout_marginBottom="18dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/icon_sendverify"
                android:onClick="ClickSendVerify"
                android:text="@string/sendverifynum"
                android:textColor="@color/themeblue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/underline2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/verifynum"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@color/themeblue" />

            <EditText
                android:id="@+id/textnewpassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_above="@+id/scancodeview"

                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/loginpassword"
                android:inputType="textPassword"
                android:textColor="@color/darkgrey"
                android:textColorHint="@color/lightgrey"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnpwdvisible"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/verifynum"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/icon_eyeclose"
                android:onClick="ClickPwdVisible" />

            <TextView
                android:id="@+id/underline3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textnewpassword"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@color/themeblue" />

            <RelativeLayout
                android:id="@+id/scancodeview"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_centerVertical="true"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textscancode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/scancode"
                    android:textColor="@color/darkgrey"
                    android:textSize="18sp"

                    />

                <Button
                    android:id="@+id/btnScan"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/textscancode"
                    android:background="@drawable/icon_scancode"
                    android:onClick="ClickScanCode" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkboxreadprotocol"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/scancodeview"
                android:layout_marginLeft="45dp"

                android:button="@drawable/checkbox"
                android:onClick="ClickReadProtocol"
                android:paddingLeft="30dp"
                android:text="@string/agreeprotocol"
                android:textColor="@color/darkgrey"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnconfirmregist"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/checkboxreadprotocol"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/icon_loginbtn"
                android:onClick="ClickRegist"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btngoback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnconfirmregist"
                android:background="#00000000"
                android:onClick="ClickClose"
                android:paddingRight="50dp"
                android:text="@string/goback"
                android:textColor="@color/darkgrey"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>
</layout>
