<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class=".LoginBinder">

        <variable
            name="user"
            type="com.ewell.android.sleepcareforphone.viewmodels.LoginViewModel" />

    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbackground"
        android:orientation="vertical"
        tools:context="com.ewell.android.sleepcareforphone.activities.LoginActivity">

        <!--logo,占1/3-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_logo_2" />

        </FrameLayout>
        <!--logo下, 登录按钮上的部分, 占1/3-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.8">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_above="@+id/password"
                android:drawableLeft="@drawable/icon_figure"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/icon_figure"
                android:hint="@string/loginusername"
                android:inputType="text"
                android:text="@{user.loginName}"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/loginpassword"
                android:inputType="textPassword"
                android:text="@{user.password}"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkbox_savepassword"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/password"
                android:layout_marginTop="10dp"
                android:checked="@{user.isSavepassword}"
                android:onClick="@{user.checkboxCommand}"
                android:paddingLeft="7dp"
                android:text="@string/savepassword"
                android:textSize="18sp" />


        </RelativeLayout>

        <!--登录按钮以下部分,占1/3-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1.2">

            <Button
                android:id="@+id/email_sign_in_button"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/icon_loginbtn"
                android:onClick="@{user.btnCommand}"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/blankcenter"
                android:layout_width="5dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>


    </LinearLayout>

</layout>