<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class=".ForgetPwdBinder">

        <variable
            name="forgetPwd"
            type="com.ewell.android.sleepcareforphone.viewmodels.ForgetPwdViewModel" />

    </data>


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.ewell.android.sleepcareforphone.activities.ForgetPwdActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/TitleView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/themeblue">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="170dp"
                    android:layout_height="65dp"

                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/resignpassword"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="16dp"
                    android:layout_height="26dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/btn_back"
                    android:onClick="ClickClose" />

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/icon_logo_1" />
            </FrameLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_above="@+id/verifynum"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_telephone"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/icon_telephone"
                android:hint="@string/loginusername"
                android:inputType="phone"
                android:textColor="@color/darkgrey"
                android:textColorHint="@color/lightgrey"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/underline1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/telephone"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@color/themeblue" />

            <EditText
                android:id="@+id/verifynum"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_above="@+id/textnewpassword"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_verify"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/icon_verify"
                android:hint="@string/verifynum"
                android:inputType="number"
                android:textColor="@color/darkgrey"
                android:textColorHint="@color/lightgrey"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnsendverify"
                android:layout_width="80dp"
                android:layout_height="29dp"
                android:layout_above="@+id/textnewpassword"

                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/icon_sendverify"
                android:onClick="ClickSendVerify"
                android:text="@string/sendverifynum"
                android:textColor="@color/themeblue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/underline2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/verifynum"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@color/themeblue" />

            <EditText
                android:id="@+id/textnewpassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/newpassword"
                android:inputType="textPassword"
                android:textColor="@color/darkgrey"
                android:textColorHint="@color/lightgrey"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnpwdvisible"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/verifynum"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/icon_eyeclose"

                android:onClick="ClickPwdVisible"

                />

            <TextView
                android:id="@+id/underline3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textnewpassword"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@color/themeblue" />

            <Button
                android:id="@+id/confirmResignPwd"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textnewpassword"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/icon_loginbtn"

                android:onClick="@{forgetPwd.ConfirmCommand}"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="22sp" />


        </RelativeLayout>
    </LinearLayout>
</layout>